@@ -8,3 +8,9 @@ type Register struct {
 	Email          string
 	AgreedToTerms  bool
 }
+
+// Login is dispatched to the server when the client clicks “Submit” on the login form.
+type Login struct {
+	Username string
+	Password string
+}
