@@ -2,6 +2,23 @@ package util
 
 import "regexp"
 
+// Permits only alphanumerics and '.'
+var re_username_chars regexp.Regexp = *regexp.MustCompile(`([a-z]|[A-Z]|[0-9]|\.)`)
+
+// ValidateUsernameCharacters confirms that a username has no prohibited characters that could be used, for example, for sql injection attacks.
+func ValidateUsernameCharacters(s string) (bool, string) {
+	match := re_username_chars.Match([]byte(s))
+	if match {
+		return true, ""
+	}
+	return false, "Usernames may only contain alphanumeric characters."
+}
+
+// ValidateUsernameContent confirms a username has no profanity or prohibited characters.
+func ValidateUsernameContent(s string) (bool, string) {
+	return ValidateUsernameCharacters(s)
+}
+
 // ValidatePasswordStrength determines whether a given string is strong enough to be a password.
 func ValidatePasswordStrength(s string) (bool, string) {
 	if len(s) < 8 {
@@ -16,7 +33,7 @@ func ValidateUsername(s string) (bool, string) {
 	if len(s) < 3 {
 		return false, "Your username must be at least 3 characters."
 	}
-	return true, ""
+	return ValidateUsernameContent(s)
 }
 
 // see: https://github.com/google/re2/wiki/Syntax
