@@ -1,3 +1,7 @@
+2/10/2023: Karl
+ - Added the login pipeline.
+ - Added debugging and appropriate launch.json config for that.
+
 
 2/7/2023 : Karl
  - Added a simple CLI and logger to the server. There is now a separate thread for the CLI and the server runs in the background. The server can be stopped through the CLI. The CLI can also toggle logging and get a count of the active users.
